# CannyEdges

./: CMakeLists.txt  README.md  canny.cpp
